@@ -82,17 +82,29 @@ void (*grub_ieee1275_net_config) (const char *dev,
 void
 grub_machine_get_bootlocation (char **device, char **path)
 {
-  char bootpath[64]; /* XXX check length */
+  char *bootpath;
+  grub_ssize_t bootpath_size;
   char *filename;
   char *type;
-   
-  if (grub_ieee1275_get_property (grub_ieee1275_chosen, "bootpath", &bootpath,
-				  sizeof (bootpath), 0))
+
+  if (grub_ieee1275_get_property_length (grub_ieee1275_chosen, "bootpath",
+					 &bootpath_size)
+      || bootpath_size <= 0)
     {
       /* Should never happen.  */
       grub_printf ("/chosen/bootpath property missing!\n");
       return;
     }
+
+  bootpath = (char *) grub_malloc ((grub_size_t) bootpath_size + 64);
+  if (! bootpath)
+    {
+      grub_print_error ();
+      return;
+    }
+  grub_ieee1275_get_property (grub_ieee1275_chosen, "bootpath", bootpath,
+                              (grub_size_t) bootpath_size + 1, 0);
+  bootpath[bootpath_size] = '\0';
 
   /* Transform an OF device path to a GRUB path.  */
 
@@ -132,6 +144,7 @@ grub_machine_get_bootlocation (char **device, char **path)
 	  *path = filename;
 	}
     }
+  grub_free (bootpath);
 }
 
 /* Claim some available memory in the first /memory node. */
