@@ -1,3 +1,8 @@
+2012-12-10  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>
+
+	* grub-core/kern/ieee1275/init.c (grub_machine_get_bootlocation): Use
+	dynamic allocation for the bootpath buffer.
+
 2012-12-10  Dr. Tilmann Bubeck <t.bubeck@reinform.de>
 
 	* grub-core/gfxmenu/view.c (init_terminal): Avoid making terminal
